k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rishabh-store-prod
  labels:
    environment: production
    app: rishabh-provision-store
