k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rishabh-store-ingress
  namespace: rishabh-store-prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: rishabhstore.com
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: server-service
                port:
                  number: 5001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 80
